test/webgl/error/unterminated_comment_footer.true
File 0, line 4, col 2:
unterminated comment

Fatal: unrecoverable parse error (2)
